--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/5dac2552f8.js" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
   <body>
